--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         text-align: center;
     }
     div.para {
-        margin-top: 275px;
-        margin-left: 190px;
-        margin-right: 820px;
+        width:400;
+        margin-left: 230px;
+        margin-top: 100px;
         text-align: center;
 
     }
