padding, border box

--- a/recipes.html
+++ b/recipes.html
@@ -18,6 +18,11 @@
         margin-bottom: 60px;
         margin-top: 25px;
     }
+    p {
+        background-color:darkgray;
+        color: white;
+        padding: 30px;
+    }
         .footer {
             position:relative;
             text-align: center;
@@ -80,9 +85,7 @@
             In Italy, pizza served in formal settings, such as at a restaurant, is presented unsliced, and is eaten with the use of a knife and fork.[2][3] In casual settings, however, it is cut into wedges to be eaten while held in the hand.
             
             The term pizza was first recorded in the 10th century in a Latin manuscript from the Southern Italian town of Gaeta in Lazio, on the border with Campania.[4] Modern pizza was invented in Naples, and the dish and its variants have since become popular in many countries.[5] It has become one of the most popular foods in the world and a common fast food item in Europe and North America, available at pizzerias (restaurants specializing in pizza), restaurants offering Mediterranean cuisine, and via pizza delivery.[5][6] Many companies sell ready-baked frozen pizzas to be reheated in an ordinary home oven..</p>
-        <div>
             <p><a href="#top">Back to Top</a></p>
-        </div>
         </section></div>
         <br><br>
     <div class="footer">
