--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE HTML utf-8>
 <HTML>
 <HEAD>
-<TITLE>little sugar &amp; spice</TITLE>
+<TITLE>little sugar &amp spice</TITLE>
 <style>
     div.left {
         margin-top: 40px;
@@ -9,7 +10,7 @@
         margin-right: 870px;
         text-align: center;
     }
-    div.para {
+    #p1 {
         width:400;
         margin-left: 230px;
         margin-top: 100px;
@@ -18,6 +19,25 @@
     }
     div.picture {
         margin-right: 270px;
+    }
+    .btn {
+                background-color:gold;
+                border: none;
+                color: white;
+                padding: 10px 27px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin-left: 100px;
+                border-radius: 15px;
+                display: inline-block;
+    }
+    @media screen and (max-width: 900px) {
+   H1 {
+    font-size: medium;
+  }
+
     }
 </style>
 </HEAD>
@@ -31,13 +51,17 @@
 <div class="picture">
     <img src="prawn.jpeg" alt="pasta" width="400" align="right">
 </div>
-<div class="para">
-<p>
+<div>
+<p id="p1" align="center">
     Hi, there foodies ! Welcome to my blog, I will be sharing the best of my recipes right here. Feel free to join in with me in this amazing journey. Hope you all people are having a wonderful day!<br>
-    <p><a href ="recipes.html" target="_blank" title="myblog">Click here to know more</a><br>
-        <a href ="form.html" target="_blank" title="form">Click here to get in touch</a>
-    </p>
-</p></div>
-</div>
+    <br>
+    <br>
+    <p class="btn">
+        <a href ="recipes.html" target="_blank" title="myblog">Know More</a></p>
+    <p class="btn">
+        <a href ="vlogpost.html" target="_blank" title="vlog">go to responsive page</a></p>
+    <p class="btn">
+        <a href ="form.html" target="_blank" title="form">Get in Touch</a>
+    </p></div>
 </BODY>
 </HTML>
