--- a/vlogpost.html
+++ b/vlogpost.html
@@ -16,13 +16,15 @@
         .btn {
         background-color: black;
         border: none;
-        color: white;
         padding: 10px 27px;
         text-align: center;
-        text-decoration: none;
         display: inline-block;
         font-size: 16px;
-    }
+        }
+        .btn > a {
+            text-decoration: none;
+            color: white;
+        }
         #image {
             width: 70%;
             height: 90%;
@@ -89,6 +91,10 @@
                 display: inline-block;
                 font-size: 9px;
             }
+            .btn > a {
+            text-decoration: none;
+            color: white;
+            }
         }
          /*---- mobile phones - small sized devices----*/
 
@@ -137,6 +143,10 @@
                 display: inline-block;
                 font-size: 6px;
             }
+            .btn > a {
+            text-decoration: none;
+            color: white;
+            }
         }
         </style>
     </head>
@@ -148,7 +158,7 @@
             <hr width="80%" style="height: 5px; background-color: black;">
             <p>Hi, there foodies ! Welcome to my blog.<br>I will be sharing the best of my recipes right here. Feel free to join in with me in this amazing journey. Hope you all people are having a wonderful day!</p>
             <p class="btn">
-                <a href ="recipes.html" target="_blank" title="myblog">Know More</a></p>
+                <a href ="recipes.html" target="_blank" title="myblog">Know More >></a></p>
         </div>
     </body>
 </html>
